test/conformance/chainsaw/mutate/clusterpolicy/cornercases/variables-mutate-existing/02-resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: foo
---
apiVersion: v1
data:
  fookey: fakeval
kind: ConfigMap
metadata:
  name: mycm
  namespace: foo
  labels:
    kyverno.io/watch: "true"
---
apiVersion: v1
kind: Pod
metadata:
  name: mypod
  namespace: foo
spec:
  terminationGracePeriodSeconds: 10
  containers:
  - name: busybox
    image: busybox:1.35
    command: ["sleep", "1d"]
    volumeMounts:
    - name: mycm
      mountPath: /etc/mycm
  volumes:
    - name: mycm
      configMap:
        name: mycm
---
apiVersion: v1
kind: Pod
metadata:
  name: unwatched
  namespace: foo
spec:
  terminationGracePeriodSeconds: 10
  containers:
  - name: busybox
    image: busybox:1.35
    command: ["sleep", "1d"]
    volumeMounts:
    - name: othercm
      mountPath: /etc/fooconfig
  volumes:
    - name: othercm
      configMap:
        name: othercm
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: othercm
  namespace: foo
data:
  foo: bar
