test/conformance/chainsaw/mutate/clusterpolicy/cornercases/variables-mutate-existing/chainsaw-step-02-apply-1-3.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
  namespace: foo
spec:
  containers:
  - command:
    - sleep
    - 1d
    image: public.ecr.aws/docker/library/busybox:1.35
    name: busybox
    volumeMounts:
    - mountPath: /etc/mycm
      name: mycm
  volumes:
  - configMap:
      name: mycm
    name: mycm
