test/conformance/chainsaw/mutate/clusterpolicy/cornercases/variables-mutate-existing/chainsaw-step-02-apply-1-5.yaml
apiVersion: v1
data:
  foo: bar
kind: ConfigMap
metadata:
  name: othercm
  namespace: foo
