test/conformance/chainsaw/mutate/clusterpolicy/cornercases/variables-mutate-existing/chainsaw-step-04-apply-1-1.yaml
apiVersion: v1
data:
  fookey: bar
kind: ConfigMap
metadata:
  name: mycm
  namespace: foo
