test/conformance/chainsaw/mutate/clusterpolicy/cornercases/variables-mutate-existing/update-mycm.yaml
apiVersion: v1
data:
  fookey: bar
kind: ConfigMap
metadata:
  name: mycm
  namespace: foo
  labels:
    kyverno.io/watch: "true"
