test/conformance/chainsaw/mutate/clusterpolicy/cornercases/variables-mutate-existing/04-cm-assert.yaml
apiVersion: v1
data:
  fookey: bar
kind: ConfigMap
metadata:
  name: mycm
  namespace: foo
