test/conformance/chainsaw/mutate/clusterpolicy/cornercases/variables-mutate-existing/05-pod-assert.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
  namespace: foo
  annotations:
    corp.org/random: bar
