test/conformance/chainsaw/mutate/clusterpolicy/cornercases/variables-mutate-existing/chainsaw-step-02-assert-1-2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
  namespace: foo
