test/conformance/chainsaw/mutate/clusterpolicy/cornercases/variables-mutate-existing/chainsaw-step-06-error-1-1.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    corp.org/random: bar
  name: unwatched
  namespace: foo
