test/conformance/chainsaw/mutate/clusterpolicy/cornercases/variables-mutate-existing/99-cleanup.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: cleanup
spec:
  timeouts: {}
  try:
  - command:
      args:
      - delete
      - -f
      - 01-policy.yaml,02-resources.yaml
      - --force
      - --wait=true
      - --ignore-not-found=true
      entrypoint: kubectl
