test/conformance/chainsaw/mutate/clusterpolicy/cornercases/variables-mutate-existing/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: variables-mutate-existing
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: chainsaw-step-01-apply-1-1.yaml
    - assert:
        file: chainsaw-step-01-assert-1-1.yaml
  - name: step-02
    try:
    - apply:
        file: chainsaw-step-02-apply-1-1.yaml
    - apply:
        file: chainsaw-step-02-apply-1-2.yaml
    - apply:
        file: chainsaw-step-02-apply-1-3.yaml
    - apply:
        file: chainsaw-step-02-apply-1-4.yaml
    - apply:
        file: chainsaw-step-02-apply-1-5.yaml
    - assert:
        file: chainsaw-step-02-assert-1-1.yaml
    - assert:
        file: chainsaw-step-02-assert-1-2.yaml
  - name: step-03
    try:
    - apply:
        file: update-mycm.yaml
    - assert:
        file: update-mycm.yaml
  - name: step-04
    try:
    - apply:
        file: chainsaw-step-04-apply-1-1.yaml
  - name: step-05
    try:
    - apply:
        file: chainsaw-step-05-apply-1-1.yaml
  - name: step-06
    try:
    - error:
        file: chainsaw-step-06-error-1-1.yaml
